# uniffi-bindgen-error-example

./: Cargo.toml  README.md
src/: lib.rs  lib.udl
src/bindgen/: main.rs
