[package]
name = "my_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "my_lib"
crate-type = ["cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bindgen/main.rs"

[dependencies]
uniffi = "0.28.1"

[build-dependencies]
uniffi = { version = "0.28.1", features = ["build"] }

[features]
cli = ["uniffi/cli"]
